--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@heroicons/react": "^2.1.3",
     "@mui/icons-material": "^6.1.0",
     "@mui/material": "^6.1.0",
@@ -17,6 +18,7 @@
     "openmeteo": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-lottie": "^1.2.4",
     "react-modal": "^3.16.1",
     "react-redux": "^8.1.3",
@@ -25,9 +27,8 @@
     "recharts": "^2.12.7",
     "web-vitals": "^2.1.4"
   },
-  
   "scripts": {
-    "start": "concurrently \"npm run backend\" \"npm run frontend\" && npm run python", 
+    "start": "concurrently \"npm run backend\" \"npm run frontend\" && npm run python",
     "backend": "cd ../SABAPI_v2/SABAPI_V2/SABAPI && dotnet run",
     "frontend": "react-scripts start",
     "python": "cd ../SABAPI_v2/python_kodu && python \"manuelStatus request.py\"",
